--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,8 @@ deps = flake8
 commands = flake8 skctr
 
 [testenv]
+passenv = CI TRAVIS TRAVIS_*
+commands = codecov
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
@@ -21,5 +23,6 @@ deps =
 commands =
     pip install -U pip
     py.test --basetemp={envtmpdir}
+    codecov
 
 
