--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,85 +1,37 @@
-# AppVeyor.com is a Continuous Integration service to build and run tests under
-# Windows
-# https://ci.appveyor.com/project/classtag/scikit-ctr
+
+# What Python version is installed where:
+# http://www.appveyor.com/docs/installed-software#python
 
 environment:
-  global:
-    # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
-    # /E:ON and /V:ON options are not enabled in the batch script interpreter
-    # See: https://stackoverflow.com/a/13751649/163740
-    CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\build_tools\\appveyor\\run_with_env.cmd"
-    WHEELHOUSE_UPLOADER_USERNAME: classtag-appveyor
-    WHEELHOUSE_UPLOADER_SECRET:
-      secure: BQm8KfEj6v2Y+dQxb2syQvTFxDnHXvaNktkLcYSq7jfbTOO6eH9n09tfQzFUVcWZ
-
-    # Make sure we don't download large datasets when running the test on
-    # continuous integration platform
-    SKLEARN_SKIP_NETWORK_TESTS: 1
-
   matrix:
-    - PYTHON: "C:\\Python37-x64"
-      PYTHON_VERSION: "3.6.7"
-      PYTHON_ARCH: "64"
-      CHECK_WARNINGS: "true"
 
-# Because we only have a single worker, we don't want to waste precious
-# appveyor CI time and make other PRs wait for repeated failures in a failing
-# PR. The following option cancels pending jobs in a given PR after the first
-# job failure in that specific PR.
-matrix:
-    fast_finish: true
+    - PYTHON: "C:\\Python36"
+      TOX_ENV: "py36"
 
+    - PYTHON: "C:\\Python36-x64"
+      TOX_ENV: "py36"
+
+init:
+  - set PATH=%PYTHON%;%PYTHON%\Scripts;C:\MinGW\msys\1.0\bin;%PATH%
+  - "git config --system http.sslcainfo \"C:\\Program Files\\Git\\mingw64\\ssl\\certs\\ca-bundle.crt\""
+  - "%PYTHON%/python -V"
+  - "%PYTHON%/python -c \"import struct;print(8 * struct.calcsize(\'P\'))\""
 
 install:
-  # If there is a newer build queued for the same PR, cancel this one.
-  # The AppVeyor 'rollout builds' option is supposed to serve the same
-  # purpose but is problematic because it tends to cancel builds pushed
-  # directly to master instead of just PR builds.
-  # credits: JuliaLang developers.
-  - ps: if ($env:APPVEYOR_PULL_REQUEST_NUMBER -and $env:APPVEYOR_BUILD_NUMBER -ne ((Invoke-RestMethod `
-        https://ci.appveyor.com/api/projects/$env:APPVEYOR_ACCOUNT_NAME/$env:APPVEYOR_PROJECT_SLUG/history?recordsNumber=500).builds | `
-        Where-Object pullRequestId -eq $env:APPVEYOR_PULL_REQUEST_NUMBER)[0].buildNumber) { `
-        throw "There are newer queued builds for this pull request, failing early." }
+  - "%PYTHON%/Scripts/easy_install -U pip"
+  - "%PYTHON%/Scripts/pip install tox"
+  - "%PYTHON%/Scripts/pip install wheel"
 
-  # Install Python (from the official .msi of https://python.org) and pip when
-  # not already installed.
-  - "powershell ./build_tools/appveyor/install.ps1"
-  - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
-  - "python -m pip install -U pip"
-
-  # Check that we have the expected version and architecture for Python
-  - "python --version"
-  - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
-  - "pip --version"
-
-  # Install the build and runtime dependencies of the project.
-  - "%CMD_IN_ENV% pip install --timeout=60 --trusted-host 28daf2247a33ed269873-7b1aad3fab3cc330e1fd9d109892382a.r6.cf2.rackcdn.com -r build_tools/appveyor/requirements.txt"
-  - "%CMD_IN_ENV% python setup.py bdist_wheel bdist_wininst -b doc/logos/scikit-learn-logo.bmp"
-  - ps: "ls dist"
-
-  # Install the generated wheel package to test it
-  - "pip install --pre --no-index --find-links dist/ scikit-learn"
-
-# Not a .NET project, we build scikit-learn in the install step instead
-build: false
+build: false  # Not a C# project, build stuff at the test step instead.
 
 test_script:
-  # Change to a non-source folder to make sure we run the tests on the
-  # installed library.
-  - mkdir "../empty_folder"
-  - cd "../empty_folder"
-  - ps: >-
-        if (Test-Path variable:global:CHECK_WARNINGS) {
-            $env:PYTEST_ARGS = "-Werror::DeprecationWarning -Werror::FutureWarning"
-        } else {
-            $env:PYTEST_ARGS = ""
-        }
-  - "pytest --showlocals --durations=20 %PYTEST_ARGS% --pyargs sklearn"
-  # Move back to the project folder
-  - cd "../scikit-ctr"
+  - "%PYTHON%/Scripts/tox -e %TOX_ENV%"
+
+after_test:
+  - "%PYTHON%/python setup.py --command-packages wheel bdist_wheel"
+  - ps: "ls dist"
 
 artifacts:
-  # Archive the generated wheel package in the ci.appveyor.com build report.
   - path: dist\*
 
 on_success:
