--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,6 +21,7 @@ install:
   - "%PYTHON%/Scripts/easy_install -U pip"
   - "%PYTHON%/Scripts/pip install tox"
   - "%PYTHON%/Scripts/pip install wheel"
+  - "%PYTHON%/Scripts/pip install -r requirements_dev.txt"
 
 build: false  # Not a C# project, build stuff at the test step instead.
 
