--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: ~/scikit-ctr
+    working_directory: ~/repo
 
     steps:
       - checkout
@@ -49,6 +49,12 @@ jobs:
           command: |
             . venv/bin/activate
             python setup.py test
+
+      - run:
+          name: run codecov
+          command: |
+            . venv/bin/activate
+            codecov --token=445aaed5-c924-4324-b5f7-60d4bbb8604c
 
       - store_artifacts:
           path: test-reports
