--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,6 @@ deps =
 commands =
     pip install -U pip
     py.test --basetemp={envtmpdir}
-    codecov
+    codecov --token=445aaed5-c924-4324-b5f7-60d4bbb8604c
 
 
