--- a/tox.ini
+++ b/tox.ini
@@ -11,17 +11,14 @@ deps = flake8
 commands = flake8 skctr
 
 [testenv]
-passenv = CI TRAVIS TRAVIS_*
+passenv = TOXENV CI TRAVIS TRAVIS_*
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
     -r{toxinidir}/requirements_dev.txt
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following line:
-;     -r{toxinidir}/requirements.txt
 commands =
     pip install -U pip
     py.test --basetemp={envtmpdir}
-    codecov --token=445aaed5-c924-4324-b5f7-60d4bbb8604c
+    codecov -e TOXENV --token=445aaed5-c924-4324-b5f7-60d4bbb8604c
 
 
